fix: modal z-index

--- a/src/routes/allocator/style.scss
+++ b/src/routes/allocator/style.scss
@@ -53,7 +53,7 @@
 }
 
 .modal {
-	z-index: 5;
+	z-index: 15;
 	position: absolute;
 	left: 0;
 	top: 0;
